# test

./: .pre-commit-config.yaml  pyproject.toml  test.py
mysite/mysite/: settings.py
