[tool.poetry]
name = "create_proj_django"
version = "0.1.0"
description = ""
authors = ["Masood Imran <imran@bluegate-soft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
